Prepared for UPM Usage

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Range Value",
   "description": "Data type that can easy handle range in Unity inspector",
   "version": "1.0.1",
-  "unity": "2020.3",
+  "unity": "2018.3",
   "license": "MIT",
   "dependencies": {
   },
@@ -11,7 +11,7 @@
     {
       "displayName": "Example Scene",
       "description": "API abilities demonstration",
-      "path": "Sample"
+      "path": "Samples~"
     }
   ]
 }
